# skriptorium

./: LICENSE  README.md
api/: .dockerignore  .gitignore  Dockerfile  README.md  index.js  package-lock.json  package.json  packages.dhall  spago.dhall
api/src/: Environment.js  Environment.purs  Main.purs  Types.purs
api/src/AI/: NLPCloud.purs
api/src/AI/nlpcloud/: NLPCloud.js
api/src/AI/openai/: OpenAI.purs
api/src/Api/: Api.purs  Templates.purs  Types.purs
api/src/Api/Templates/: Tldr.purs
api/src/NLPCloud/: NLPCloud.js  NLPCloud.purs
api/src/Routes/: Routes.purs
api/templates/nlpcloud/: classification.txt
api/templates/openai/: classification.txt
cli/: .gitignore  Cargo.toml  README.md  skriptorium
cli/assets/: languages.json
cli/src/: api.rs  dirs.rs  main.rs
cli/src/api/: classification.rs
cli/src/cmd/: directory_listing.rs  file_selection.rs  language_detection.rs  mod.rs  scribe.rs  util.rs
cli/src/guesslang/: classification.rs  mod.rs  model_downloader.rs
