[package]
name = "skriptorium"
version = "0.1.0"
edition = "2021"

license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = "1.0.130"
serde_json = "1.0.68"
indicatif = "0.16.2"
dialoguer = "0.9.0"
console = "0.15.0"
reqwest = "0.11.6"
log = "0.4.14"
