[package]
edition = "2021"
name = "skriptorium"
version = "0.1.0"

license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = "2.33.3"
console = "0.15.0"
crossbeam-channel = "0.4.0"
dialoguer = "0.9.0"
directories = "4.0.1"
indicatif = "0.16.2"
log = "0.4"
#notify = "5.0.0-pre.13"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
tensorflow = "0.17.0"
gitignore = "1.0.7"
tokio = {version = "1", features = ["full"]}
walkdir = "2"
futures = "0.3.18"
itertools = "0.10.1"
rust-embed="6.2.0"
rand = "0.8.4"
